--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World!</title>
+<title>Hello World! Sardor</title>
 </head>
 <link ref="stylesheet" href="./style.css"/>
 <body>
