--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 	<p>this is the first file in my new git repo</p>
 	<p>A new line in our file!</p>
 	<h1>I am going back to the base and fight for future!</h1>
+	<p> you should be care-full! </p>
 </body>
 </html> 
